--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ content="text/html; charset=iso-8859-1">
 <meta name="CREATED" content="0;0">
 <meta name="CHANGED" content="20090525;17010600">
 <meta name="Date" content="03/08/14">
+<title>Francis J. Deck</title>
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF"
@@ -16,7 +17,7 @@ vlink="#800080" lang="en-US" dir="LTR">
 <h3 align="center"><font color="#671641">String Bass | Electric
 Bass</font></h3>
 
-<p align="center"><img src="img/untitled2.jpg" width="345"
+<p align="center"><img src="untitled2.jpg" width="345"
 height="506" name="graphics1"> </p>
 
 <p align="center"><a href="#music"><strong>Music</strong></a><strong>
